src/parser/generated/KarolParser.ts

import * as antlr from "antlr4ng";



export class KarolParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly T__33 = 34;
    public static readonly T__34 = 35;
    public static readonly T__35 = 36;
    public static readonly T__36 = 37;
    public static readonly T__37 = 38;
    public static readonly T__38 = 39;
    public static readonly T__39 = 40;
    public static readonly T__40 = 41;
    public static readonly T__41 = 42;
    public static readonly T__42 = 43;
    public static readonly T__43 = 44;
    public static readonly T__44 = 45;
    public static readonly T__45 = 46;
    public static readonly T__46 = 47;
    public static readonly T__47 = 48;
    public static readonly T__48 = 49;
    public static readonly T__49 = 50;
    public static readonly T__50 = 51;
    public static readonly T__51 = 52;
    public static readonly T__52 = 53;
    public static readonly T__53 = 54;
    public static readonly T__54 = 55;
    public static readonly T__55 = 56;
    public static readonly T__56 = 57;
    public static readonly T__57 = 58;
    public static readonly T__58 = 59;
    public static readonly T__59 = 60;
    public static readonly T__60 = 61;
    public static readonly T__61 = 62;
    public static readonly T__62 = 63;
    public static readonly IDENTIFIER = 64;
    public static readonly LETTER = 65;
    public static readonly DIGIT = 66;
    public static readonly WS = 67;
    public static readonly RULE_karol = 0;
    public static readonly RULE_definition = 1;
    public static readonly RULE_methoddefinition = 2;
    public static readonly RULE_conditiondefinition = 3;
    public static readonly RULE_statement = 4;
    public static readonly RULE_customMethodCall = 5;
    public static readonly RULE_iteration = 6;
    public static readonly RULE_loop = 7;
    public static readonly RULE_conditional = 8;
    public static readonly RULE_instruction = 9;
    public static readonly RULE_parameterizedinstruction = 10;
    public static readonly RULE_conditionexpression = 11;
    public static readonly RULE_customConditionCall = 12;
    public static readonly RULE_condition = 13;
    public static readonly RULE_parameterizedcondition = 14;
    public static readonly RULE_color = 15;
    public static readonly RULE_number = 16;

    public static readonly literalNames = [
        null, "'programm'", "'endeprogramm'", "'*programm'", "'anweisung'", 
        "'endeanweisung'", "'*anweisung'", "'methode'", "'endemethode'", 
        "'*methode'", "'bedingung'", "'endebedingung'", "'*bedingung'", 
        "';'", "'karol'", "'.'", "'('", "')'", "'wiederhole'", "'mal'", 
        "'endewiederhole'", "'*wiederhole'", "'solange'", "'bis'", "'wenn'", 
        "'dann'", "'sonst'", "'endewenn'", "'*wenn'", "'schritt'", "'linksdrehen'", 
        "'rechtsdrehen'", "'hinlegen'", "'aufheben'", "'markesetzen'", "'markel\\u00F6schen'", 
        "'warten'", "'ton'", "'beenden'", "'schnell'", "'langsam'", "'nicht'", 
        "'istwand'", "'nichtistwand'", "'ists\\u00FCden'", "'istnorden'", 
        "'istwesten'", "'istosten'", "'istvoll'", "'nichtistvoll'", "'istleer'", 
        "'nichtistleer'", "'istziegel'", "'nichtistziegel'", "'istmarke'", 
        "'nichtistmarke'", "'hatziegel'", "'wahr'", "'falsch'", "'rot'", 
        "'gelb'", "'blau'", "'gr\\u00FCn'", "'schwarz'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, "IDENTIFIER", 
        "LETTER", "DIGIT", "WS"
    ];
    public static readonly ruleNames = [
        "karol", "definition", "methoddefinition", "conditiondefinition", 
        "statement", "customMethodCall", "iteration", "loop", "conditional", 
        "instruction", "parameterizedinstruction", "conditionexpression", 
        "customConditionCall", "condition", "parameterizedcondition", "color", 
        "number",
    ];

    public get grammarFileName(): string { return "Karol.g4"; }
    public get literalNames(): (string | null)[] { return KarolParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return KarolParser.symbolicNames; }
    public get ruleNames(): string[] { return KarolParser.ruleNames; }
    public get serializedATN(): number[] { return KarolParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, KarolParser._ATN, KarolParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public karol(): KarolContext {
        let localContext = new KarolContext(this.context, this.state);
        this.enterRule(localContext, 0, KarolParser.RULE_karol);
        let _la: number;
        try {
            this.state = 60;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 37;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1168) !== 0)) {
                    {
                    {
                    this.state = 34;
                    this.definition();
                    }
                    }
                    this.state = 39;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 40;
                this.match(KarolParser.T__0);
                this.state = 44;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 41;
                    this.statement();
                    }
                    }
                    this.state = 46;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 47;
                _la = this.tokenStream.LA(1);
                if(!(_la === 2 || _la === 3)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1168) !== 0)) {
                    {
                    {
                    this.state = 48;
                    this.definition();
                    }
                    }
                    this.state = 53;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 57;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 54;
                    this.statement();
                    }
                    }
                    this.state = 59;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public definition(): DefinitionContext {
        let localContext = new DefinitionContext(this.context, this.state);
        this.enterRule(localContext, 2, KarolParser.RULE_definition);
        try {
            this.state = 64;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case KarolParser.T__9:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 62;
                this.conditiondefinition();
                }
                break;
            case KarolParser.T__3:
            case KarolParser.T__6:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 63;
                this.methoddefinition();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public methoddefinition(): MethoddefinitionContext {
        let localContext = new MethoddefinitionContext(this.context, this.state);
        this.enterRule(localContext, 4, KarolParser.RULE_methoddefinition);
        let _la: number;
        try {
            this.state = 84;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case KarolParser.T__3:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 66;
                this.match(KarolParser.T__3);
                this.state = 67;
                this.match(KarolParser.IDENTIFIER);
                this.state = 71;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 68;
                    this.statement();
                    }
                    }
                    this.state = 73;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 74;
                _la = this.tokenStream.LA(1);
                if(!(_la === 5 || _la === 6)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            case KarolParser.T__6:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 75;
                this.match(KarolParser.T__6);
                this.state = 76;
                this.match(KarolParser.IDENTIFIER);
                this.state = 80;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 77;
                    this.statement();
                    }
                    }
                    this.state = 82;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 83;
                _la = this.tokenStream.LA(1);
                if(!(_la === 8 || _la === 9)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditiondefinition(): ConditiondefinitionContext {
        let localContext = new ConditiondefinitionContext(this.context, this.state);
        this.enterRule(localContext, 6, KarolParser.RULE_conditiondefinition);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 86;
            this.match(KarolParser.T__9);
            this.state = 87;
            this.match(KarolParser.IDENTIFIER);
            this.state = 90;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                this.state = 90;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
                case 1:
                    {
                    this.state = 88;
                    this.statement();
                    }
                    break;
                case 2:
                    {
                    this.state = 89;
                    this.conditionexpression();
                    }
                    break;
                }
                }
                this.state = 92;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 4294935569) !== 0) || ((((_la - 46)) & ~0x1F) === 0 && ((1 << (_la - 46)) & 270335) !== 0));
            this.state = 94;
            _la = this.tokenStream.LA(1);
            if(!(_la === 11 || _la === 12)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 8, KarolParser.RULE_statement);
        let _la: number;
        try {
            this.state = 122;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 15, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 96;
                this.iteration();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 97;
                this.loop();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 98;
                this.conditional();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 99;
                this.instruction();
                this.state = 101;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 13) {
                    {
                    this.state = 100;
                    this.match(KarolParser.T__12);
                    }
                }

                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 103;
                this.match(KarolParser.T__13);
                this.state = 104;
                this.match(KarolParser.T__14);
                this.state = 105;
                this.instruction();
                this.state = 106;
                this.match(KarolParser.T__15);
                this.state = 107;
                this.match(KarolParser.T__16);
                this.state = 109;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 13) {
                    {
                    this.state = 108;
                    this.match(KarolParser.T__12);
                    }
                }

                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 111;
                this.parameterizedinstruction();
                this.state = 113;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 13) {
                    {
                    this.state = 112;
                    this.match(KarolParser.T__12);
                    }
                }

                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 115;
                this.match(KarolParser.T__13);
                this.state = 116;
                this.match(KarolParser.T__14);
                this.state = 117;
                this.parameterizedinstruction();
                this.state = 119;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 13) {
                    {
                    this.state = 118;
                    this.match(KarolParser.T__12);
                    }
                }

                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 121;
                this.customMethodCall();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public customMethodCall(): CustomMethodCallContext {
        let localContext = new CustomMethodCallContext(this.context, this.state);
        this.enterRule(localContext, 10, KarolParser.RULE_customMethodCall);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 124;
            this.match(KarolParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public iteration(): IterationContext {
        let localContext = new IterationContext(this.context, this.state);
        this.enterRule(localContext, 12, KarolParser.RULE_iteration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 126;
            this.match(KarolParser.T__17);
            this.state = 127;
            this.number_();
            this.state = 128;
            this.match(KarolParser.T__18);
            this.state = 132;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                {
                {
                this.state = 129;
                this.statement();
                }
                }
                this.state = 134;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 135;
            _la = this.tokenStream.LA(1);
            if(!(_la === 20 || _la === 21)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loop(): LoopContext {
        let localContext = new LoopContext(this.context, this.state);
        this.enterRule(localContext, 14, KarolParser.RULE_loop);
        let _la: number;
        try {
            this.state = 168;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 20, this.context) ) {
            case 1:
                localContext = new WhileLoopContext(localContext);
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 137;
                this.match(KarolParser.T__17);
                this.state = 138;
                this.match(KarolParser.T__21);
                this.state = 139;
                this.conditionexpression();
                this.state = 143;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 140;
                    this.statement();
                    }
                    }
                    this.state = 145;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 146;
                _la = this.tokenStream.LA(1);
                if(!(_la === 20 || _la === 21)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            case 2:
                localContext = new DoWhileLoopContext(localContext);
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 148;
                this.match(KarolParser.T__17);
                this.state = 152;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 149;
                    this.statement();
                    }
                    }
                    this.state = 154;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 155;
                _la = this.tokenStream.LA(1);
                if(!(_la === 20 || _la === 21)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 156;
                this.match(KarolParser.T__21);
                this.state = 157;
                this.conditionexpression();
                }
                break;
            case 3:
                localContext = new DoUntilLoopContext(localContext);
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 158;
                this.match(KarolParser.T__17);
                this.state = 162;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 159;
                    this.statement();
                    }
                    }
                    this.state = 164;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 165;
                _la = this.tokenStream.LA(1);
                if(!(_la === 20 || _la === 21)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 166;
                this.match(KarolParser.T__22);
                this.state = 167;
                this.conditionexpression();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditional(): ConditionalContext {
        let localContext = new ConditionalContext(this.context, this.state);
        this.enterRule(localContext, 16, KarolParser.RULE_conditional);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(KarolParser.T__23);
            this.state = 171;
            this.conditionexpression();
            this.state = 172;
            this.match(KarolParser.T__24);
            this.state = 176;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                {
                {
                this.state = 173;
                this.statement();
                }
                }
                this.state = 178;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 186;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 26) {
                {
                this.state = 179;
                this.match(KarolParser.T__25);
                this.state = 183;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (((((_la - 14)) & ~0x1F) === 0 && ((1 << (_la - 14)) & 134186001) !== 0) || _la === 64) {
                    {
                    {
                    this.state = 180;
                    this.statement();
                    }
                    }
                    this.state = 185;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }

            this.state = 188;
            _la = this.tokenStream.LA(1);
            if(!(_la === 27 || _la === 28)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public instruction(): InstructionContext {
        let localContext = new InstructionContext(this.context, this.state);
        this.enterRule(localContext, 18, KarolParser.RULE_instruction);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 190;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 29)) & ~0x1F) === 0 && ((1 << (_la - 29)) & 4095) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameterizedinstruction(): ParameterizedinstructionContext {
        let localContext = new ParameterizedinstructionContext(this.context, this.state);
        this.enterRule(localContext, 20, KarolParser.RULE_parameterizedinstruction);
        try {
            this.state = 220;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case KarolParser.T__28:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 192;
                this.match(KarolParser.T__28);
                this.state = 193;
                this.match(KarolParser.T__15);
                this.state = 194;
                this.number_();
                this.state = 195;
                this.match(KarolParser.T__16);
                }
                break;
            case KarolParser.T__31:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 197;
                this.match(KarolParser.T__31);
                this.state = 198;
                this.match(KarolParser.T__15);
                this.state = 201;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case KarolParser.T__58:
                case KarolParser.T__59:
                case KarolParser.T__60:
                case KarolParser.T__61:
                case KarolParser.T__62:
                    {
                    this.state = 199;
                    this.color();
                    }
                    break;
                case KarolParser.DIGIT:
                    {
                    this.state = 200;
                    this.number_();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 203;
                this.match(KarolParser.T__16);
                }
                break;
            case KarolParser.T__32:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 205;
                this.match(KarolParser.T__32);
                this.state = 206;
                this.match(KarolParser.T__15);
                this.state = 207;
                this.number_();
                this.state = 208;
                this.match(KarolParser.T__16);
                }
                break;
            case KarolParser.T__33:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 210;
                this.match(KarolParser.T__33);
                this.state = 211;
                this.match(KarolParser.T__15);
                this.state = 212;
                this.color();
                this.state = 213;
                this.match(KarolParser.T__16);
                }
                break;
            case KarolParser.T__35:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 215;
                this.match(KarolParser.T__35);
                this.state = 216;
                this.match(KarolParser.T__15);
                this.state = 217;
                this.number_();
                this.state = 218;
                this.match(KarolParser.T__16);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditionexpression(): ConditionexpressionContext {
        let localContext = new ConditionexpressionContext(this.context, this.state);
        this.enterRule(localContext, 22, KarolParser.RULE_conditionexpression);
        try {
            this.state = 236;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 26, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 222;
                this.match(KarolParser.T__40);
                this.state = 223;
                this.conditionexpression();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 224;
                this.condition();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 225;
                this.match(KarolParser.T__13);
                this.state = 226;
                this.match(KarolParser.T__14);
                this.state = 227;
                this.condition();
                this.state = 228;
                this.match(KarolParser.T__15);
                this.state = 229;
                this.match(KarolParser.T__16);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 231;
                this.parameterizedcondition();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 232;
                this.match(KarolParser.T__13);
                this.state = 233;
                this.match(KarolParser.T__14);
                this.state = 234;
                this.parameterizedcondition();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 235;
                this.customConditionCall();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public customConditionCall(): CustomConditionCallContext {
        let localContext = new CustomConditionCallContext(this.context, this.state);
        this.enterRule(localContext, 24, KarolParser.RULE_customConditionCall);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 238;
            this.match(KarolParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public condition(): ConditionContext {
        let localContext = new ConditionContext(this.context, this.state);
        this.enterRule(localContext, 26, KarolParser.RULE_condition);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 240;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 42)) & ~0x1F) === 0 && ((1 << (_la - 42)) & 131071) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameterizedcondition(): ParameterizedconditionContext {
        let localContext = new ParameterizedconditionContext(this.context, this.state);
        this.enterRule(localContext, 28, KarolParser.RULE_parameterizedcondition);
        try {
            this.state = 273;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case KarolParser.T__51:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 242;
                this.match(KarolParser.T__51);
                this.state = 243;
                this.match(KarolParser.T__15);
                this.state = 246;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case KarolParser.T__58:
